--- a/.azure/config
+++ b/.azure/config
@@ -3,5 +3,5 @@ group = hadrien.puissant_rg_0403
 sku = F1
 appserviceplan = hadrien.puissant_asp_3049
 location = canadacentral
-web = gentle-plant-e871010bc36146c3b980f32a4fbb91bf
+web = hack-key
 
